# ArticleSummary

./: Fetch_PDFs_MDs.py  README.md  RunLLMPrompts.py  pyproject.toml
Scripts/: APIMetaData.py  EmbedMetaData.py  ExploreArxivAPI.py  FetchPDFs.py  Fetch_PDFs_MDs.py  Preferences.py  RunLLMPrompts.py  RunLLMwithPDFs.py  config.py  context.py
article_metadata/202512240000/: 2512.20850v1.json  2512.20854v1.json  2512.20856v1.json  2512.20881v1.json  2512.20882v1.json  2512.20883v1.json  2512.20884v1.json  2512.20885v1.json  2512.20901v1.json  2512.20902v1.json  2512.20909v1.json  2512.20911v1.json  2512.20912v1.json  2512.20921v1.json  2512.20929v1.json  2512.20931v1.json  2512.20932v1.json  2512.20949v1.json  2512.20951v1.json  2512.20952v1.json  2512.20959v1.json  2512.20961v1.json  2512.20964v1.json  2512.20971v1.json  2512.20982v1.json  2512.20986v1.json  2512.20987v1.json  2512.20988v1.json  2512.20992v1.json  2512.20993v1.json  2512.20997v1.json  2512.21002v1.json  2512.21005v1.json  2512.21030v1.json  2512.21042v1.json  2512.21043v1.json  2512.21046v1.json  2512.21048v1.json  2512.21050v1.json  2512.21051v1.json  (+10 more)
downloaded_embeddings/202512240000/: 2512.20850v1_vectors.npy  2512.20854v1_vectors.npy  2512.20856v1_vectors.npy  2512.20881v1_vectors.npy  2512.20882v1_vectors.npy  2512.20883v1_vectors.npy  2512.20884v1_vectors.npy  2512.20885v1_vectors.npy  2512.20901v1_vectors.npy  2512.20902v1_vectors.npy  2512.20909v1_vectors.npy  2512.20911v1_vectors.npy  2512.20912v1_vectors.npy  2512.20921v1_vectors.npy  2512.20929v1_vectors.npy  2512.20931v1_vectors.npy  (+34 more)
(+14 files in other folders)
